syntax = "proto3";

package eventstore.connectors.v1;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "managementplane/resources.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "EventStore.Connectors.Management.Contracts.Queries";

service ConnectorsQueryService {
  rpc ListConnectors(ListConnectorsQuery) returns (ListConnectorsResult) {
    option (google.api.http) = {
      post: "/connectors/list",
      body: "*"
    };
  }
}

message ListConnectorsQuery {
  repeated ConnectorState state                      = 1;
  repeated google.protobuf.StringValue instance_type = 2;
  repeated google.protobuf.StringValue connector_id  = 3;
  Paging                               paging        = 4;
}

message ListConnectorsResult {
  repeated Connector items       = 1;
  int32              total_count = 2;
  Paging             paging      = 3;

  message Connector {
    string                                   connector_id       = 1;
    string                                   name               = 2;
    ConnectorState                           state              = 4;
    google.protobuf.Timestamp                state_timestamp    = 5;
    map<string, google.protobuf.StringValue> settings           = 6;
    google.protobuf.Timestamp                settings_timestamp = 7;
    google.protobuf.UInt64Value              position           = 8;
  }
}

message Paging {
  int32 page      = 1;
  int32 page_size = 2;
}